# cw-flip-coin

./: Cargo.toml  README.md
.cargo/: config.toml
artifacts/: checksums.txt  cw_flip_coin.wasm
schema/: cw-flip-coin.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_history_logs.json
src/: contract.rs  error.rs  execute.rs  helper.rs  integration_tests.rs  lib.rs  msg.rs  query.rs  state.rs  unit_tests.rs
