[package]
name = "cw-flip-coin"
version = "0.1.0"
authors = ["Himanshu Singh <hsnice16@gmail.com>"]
edition = "2021"

exclude = [
  # These are rust-optimizer artifacts. We might want to commit them for convenience but they should not be part of the source code publication.
  "/artifacts"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
cosmwasm-schema = "2.2.2"
cosmwasm-std = "2.2.2"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
sha2 = "0.10.8"
thiserror = "2.0.12"

[dev-dependencies]
cw-multi-test = "2.3.2"
